guestbook/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: guestbook-ui
  namespace: guestbook
spec:
  to:
    kind: Service
    name: guestbook-ui
  port:
    targetPort: 80
  tls:
    termination: edge
  wildcardPolicy: None
